# qtm-calc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/qtm-calc/: data.hpp  json.hpp
src/: CMakeLists.txt  core.cpp  data.cpp  ex.cpp  json.cpp  main.cpp  main_export.cpp  qtm-core.cpp  qtm-core.hpp  qtm-data.cpp  qtm-data.hpp  qtm-json.cpp  qtm-json.hpp
src/core/: qtm-core.cpp  qtm-core.hpp
src/data/: qtm-data.cpp  qtm-data.hpp
src/json/: qtm-json.cpp  qtm-json.hpp
tests/: CMakeLists.txt  test_suite_core.cpp  test_suite_data.cpp
tests/libqtmcalc/: CMakeLists.txt  entry.cpp  test_suite_core.cpp  test_suite_data.cpp
